# newnoid

./: .gitignore  Cargo.toml  chat.db
src/: auth.rs  ipfs.rs  main.rs  routes.rs  state.rs  ws.rs
src/crypto/: generate_keypair.rs  kyber.rs  mod.rs  receiver.rs  sender.rs
static/: app.js  chat.html  index.backup.html  index.html  kyber.js
static/pkg/: crypto_wasm.js
